set <table> table-layout to 'fixed', then 'auto' in staff and status comps; hide <td> overflow

--- a/scss/_staff.scss
+++ b/scss/_staff.scss
@@ -3,6 +3,8 @@
 $staff-icon-size: 1.5em;
 
 .c-staff {
+  table-layout: auto;
+
   // Remove WordPress auto-generated break tags:
   br {
     display: none;
