--- a/scss/_status.scss
+++ b/scss/_status.scss
@@ -9,6 +9,7 @@ $status-color-red: #f00;
 }
 
 .c-status {
+  table-layout: auto;
 
   thead tr {
 
